added links to publications

--- a/generic.html
+++ b/generic.html
@@ -43,9 +43,9 @@
 					<p>Here is a brief description of various projects I have worked on</p>
 				</header>
 				<div class="flex flex-2">
-					<div class="col col2">
+					<div style="margin-top:30px">
 						<h3>Emotionally Intelligent Virtual AI Companion</h3>
-						<h4>Jun 2019 – Present</h4>
+						<h5>Jun 2019 – Present</h5>
 						<p align='justify'>
 							<ul>
 								<li>The mental health issues of loneliness and depression are two rapidly growing
@@ -92,22 +92,8 @@
 									such as meditation to manage their feelings and emotion.
 							</ul>
 						</p>
-
-
-						<h3>Chart Analytics</h3>
-						<h4>June 2019 – Nov 2019</h4>
-						<p align='justify'>
-							<li>Trained a custom CNN for classification of the chart</li>
-							<li>
-								Extracted Charts such as Bar Chart with their labels from FigureQa Dataset
-							</li>
-							<li>
-								Using Image Processing techniques to extract numerical information from the charts
-							</li>
-						</p>
-
 						<h3>Cyberbot</h3>
-						<h4>Aug 2019–Oct 2019</h4>
+						<h5>Aug 2019–Oct 2019</h5>
 						<p align='justify'>
 							<li>A bot that answers Natural Language queries for a specific vulnerability given by user
 							</li>
@@ -118,9 +104,37 @@
 								Coded a finite state machine in python to manage states
 							</li>
 						</p>
+						<div class="copyright">
+							<ul class="icons">
+								<li><a href="https://github.com/hasnain2808/cyberbot" class="icon fa-github"><span
+											class="label">Github</span></a>
+								</li>
+							</ul>
+
+						</div>
+
+						<h3>Chart Analytics</h3>
+						<h5>June 2019 – Nov 2019</h5>
+						<p align='justify'>
+							<li>Trained a custom CNN for classification of the chart</li>
+							<li>
+								Extracted Charts such as Bar Chart with their labels from FigureQa Dataset
+							</li>
+							<li>
+								Using Image Processing techniques to extract numerical information from the charts
+							</li>
+						</p>
+						<div class="copyright">
+							<ul class="icons">
+								<li><a href="https://github.com/hasnain2808/Chart-to-summary"
+										class="icon fa-github"><span class="label">Github</span></a>
+								</li>
+							</ul>
+
+						</div>
 
 						<h3>Pheme –Ai-Qa News Bot (Winner Unscript’19 Hackathon</h3>
-						<h4>Mar 2019</h4>
+						<h5>Mar 2019</h5>
 						<p align='justify'>
 							<li>Pull news from various sources</li>
 							<li>
@@ -132,9 +146,10 @@
 							<li>
 								Deliver to the end user according to requirements</li>
 						</p>
+
 						<h3>SERVER LOG MANAGEMENT
 						</h3>
-						<h4>Feb 2019 – Mar 2019</h4>
+						<h5>Feb 2019 – Mar 2019</h5>
 						<p align='justify'>
 							<li>Smart India Hackathon Finalist
 							</li>
@@ -165,7 +180,7 @@
 							</li>
 						</p>
 						<h3>SMART HOME AUTOMATION USING IMAGE PROCESSING</h3>
-						<h4>Jul 2018 – Oct 2018</h4>
+						<h5>Jul 2018 – Oct 2018</h5>
 						<p align='justify'>The objective of this project is to develop a smart IoT based light control
 							system. <li>Due to negligence and forgetfulness, many instances occur in establishments
 								where
@@ -190,20 +205,35 @@
 								by
 								detecting changes in the position of the humans in the room.
 						</p>
+
 						<h3>HAND SIGN DETECTION</h3>
-						<h4>Apr 2018 – May 2018</h4>
+						<h5>Apr 2018 – May 2018</h5>
 						<p align='justify'>Hand sign image recognition using resnet50 model
 							using keras with tensorflow backend</p>
+						<div class="copyright">
+							<ul class="icons">
+								<li><a href="https://github.com/hasnain2808/hand_signs_detection"
+										class="icon fa-github"><span class="label">Github</span></a>
+								</li>
+							</ul>
+
+						</div>
+
 						<h3>DINOSAUR NAME GENERATION</h3>
-						<h4>Mar 2018 – Apr 2018</h4>
+						<h5>Mar 2018 – Apr 2018</h5>
+
+						<div class="copyright">
+							<ul class="icons">
+								<li><a href="https://github.com/hasnain2808/dinosaur_name-generation"
+										class="icon fa-github"><span class="label">Github</span></a>
+								</li>
+							</ul>
+
+						</div>
 						<p align='justify'>Generate dinosaur names using Character level modelling using Numpy pandas
 							from scratch</p>
 					</div>
-					<div class="col col1 first">
-						<div class="image round fit">
-							<a href="generic.html" class="link"><img src="images/pic08.jpg" alt="" /></a>
-						</div>
-					</div>
+
 				</div>
 			</div>
 		</section>
