--- a/publication.html
+++ b/publication.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Urban by TEMPLATED
 	templated.co @templatedco
@@ -14,10 +14,11 @@
 </head>
 
 <body class="subpage">
-
 	<!-- Header -->
 	<header id="header">
-		<div class="logo"><a href="index.html">Porfolio <span>by Mohammad Hasnain</span></a></div>
+		<div class="logo">
+			<a href="index.html">Porfolio <span>by Mohammad Hasnain</span></a>
+		</div>
 		<a href="#menu">Menu</a>
 	</header>
 
@@ -34,7 +35,6 @@
 
 	<!-- Main -->
 	<div id="main">
-
 		<!-- Section -->
 		<section class="wrapper">
 			<div class="inner">
@@ -43,31 +43,110 @@
 					<p>Here is a short description of my Publications</p>
 				</header>
 				<div class="flex flex-2">
-					<div class="col col2">
-						<h4>Smart Home Automation using Computer Vision and Segmented Image Processing</h4>
+					<div style="margin-top:30px">
+						<h4>
+							Smart Home Automation using Computer Vision and Segmented Image
+							Processing
+						</h4>
 						<h5>Apr 5, 2019</h5>
-						<h5> IEEE 8th International Conference on Communication and Signal Processing</h5>
-						<p align='justify'>The objective of this paper is to develop a smart IoT based light control
-							system. Due to negligence and forgetfulness, many instances occur in establishments where
-							the electrical appliances are left turned on even if there no human presence in a room. This
-							is one of the most prominent cases of electricity wastage prevalent in society. Hence there
-							is a need for an intelligent system that can ensure both efficiency and effectiveness. This
-							project combines IoT, Artificial Intelligence and Image Processing which are powerful modern
-							technologies. In this system, object detection methods are used which enable us to control
-							appliances in a specific spatial region. It also uses image processing methods which are
-							more efficient than conventional IR blaster-based home automation systems. conventional IR
-							blasters inevitably come with a fallacy where any and all objects that obstruct the infrared
-							ray trigger whatever response the system was programmed to achieve. These actions that are
-							only meant for actual human beings can now be activated by any object. This produces an
-							undesired result. This paper proposes a system which can efficiently utilize the lighting
-							output and minimize the wastage of electricity by controlling the electrical appliances by
-							detecting changes in the position of the humans in the room.</p>
+						<h5>
+							IEEE 8th International Conference on Communication and Signal
+							Processing
+						</h5>
+						<p align="justify">
+							The objective of this paper is to develop a smart IoT based
+							light control system. Due to negligence and forgetfulness, many
+							instances occur in establishments where the electrical
+							appliances are left turned on even if there no human presence in
+							a room. This is one of the most prominent cases of electricity
+							wastage prevalent in society. Hence there is a need for an
+							intelligent system that can ensure both efficiency and
+							effectiveness. This project combines IoT, Artificial
+							Intelligence and Image Processing which are powerful modern
+							technologies. In this system, object detection methods are used
+							which enable us to control appliances in a specific spatial
+							region. It also uses image processing methods which are more
+							efficient than conventional IR blaster-based home automation
+							systems. conventional IR blasters inevitably come with a fallacy
+							where any and all objects that obstruct the infrared ray trigger
+							whatever response the system was programmed to achieve. These
+							actions that are only meant for actual human beings can now be
+							activated by any object. This produces an undesired result. This
+							paper proposes a system which can efficiently utilize the
+							lighting output and minimize the wastage of electricity by
+							controlling the electrical appliances by detecting changes in
+							the position of the humans in the room.
+						</p>
 						<a href="https://ieeexplore.ieee.org/document/8697997" class="button">Link to Paper</a>
 					</div>
-					<div class="col col1 first">
-						<div class="image round fit">
-							<a href="generic.html" class="link"><img src="images/pic09.jpg" alt="" /></a>
-						</div>
+
+					<div style="margin-top:30px"">
+              <h4>
+                A Review on Artificial General Intelligence Projects, Tools and
+                Techniques (preprint)
+              </h4>
+              <p align=" justify">
+						Artificial General Intelligence has been the main aim of
+						artificial intelligence right from its inception. Creating an
+						intelligence that is capable of performing tasks with at least a
+						human-level of intelligence has driven a lot of the innovation
+						in this domain and the fruits of these decades of research and
+						application have led to the immense popularity of artificial
+						intelligence and its sub-domains in today’s world. The review
+						paper provides a review of several tools and techniques from
+						various attempts to create artificial general intelligence in
+						the last two decades.
+						</p>
+						<a href="https://drive.google.com/open?id=1_keGUFUBg-PWIhg8k_9iFN5k4DF-_FwI" class="button">Link
+							to
+							Paper</a>
+					</div>
+					<div style="margin-top:30px"">
+              <h4>
+					Review on Artificial General Intelligence Research (preprint)
+              </h4>
+              <p align=" justify">
+						This paper reviews the various papers on Artificial General Intelligence.
+						A major portion of the paper reviews earlier projects built to achieve AGI.
+						Keywords: Artficial general intellgience, AGI, artficial intelligence, computing,
+						emotional intelligence.
+						</p>
+						<a href="https://drive.google.com/open?id=1uNdDpNffjuXrQcIOgr1NHC3bEZC_2UL3" class="button">Link
+							to
+							Paper</a>
+					</div>
+
+
+					<div style="margin-top:30px">
+						<h4>
+							Energy-efficient face recognition authentication system using
+							human detection IoT modules (preprint)
+						</h4>
+						<p align="justify">
+							The application of effective techniques like facial recognition
+							and object detection in the domain of IoT has revolutionized the
+							levels of control and accuracy sensors have had for a variety of
+							purposes. Face recognition modules have established their
+							immense usefulness, and their impact has overweighed most other
+							traditional forms of access control. It remains one of the most
+							secure methods to authenticate human beings to grant them access
+							to restricted areas or systems in an organization. However, this
+							incomparable rise in accuracy comes with a relatively huge
+							price. The algorithms used in facial recognition are complex
+							mathematical functions that are iteratively performed on vast
+							volumes of data continuously. In IoT applications, the embedded
+							systems that run these algorithms are at all times clocked to
+							their maximum processing power, they need not run in cases when
+							there are no humans are present in the vicinity. This is
+							inefficient, especially in systems that need to perform face
+							recognition round-the-clock for authentication. This paper
+							proposes a simple, intuitive and efficient solution to conserve
+							the processor from being clocked to its maximum throughput
+							without compromising on the high level of security that the face
+							recognition algorithm offers.
+						</p>
+						<a href="https://drive.google.com/file/d/1lZ7L-uHQYOuh_2klIetmuhiad8cY9A1M/view?usp=sharing"
+							class="button">Link to Paper</a>
 					</div>
 				</div>
 			</div>
@@ -78,7 +157,10 @@
 			<div class="inner">
 				<header class="align-center">
 					<h2>For more information about my work</h2>
-					<p>The following is a collection of my projects,publications and certifications</p>
+					<p>
+						The following is a collection of my projects,publications and
+						certifications
+					</p>
 				</header>
 				<div class="flex flex-3">
 					<div class="col align-center">
@@ -99,7 +181,10 @@
 						<div class="image round fit">
 							<img src="images/pic08.jpg" alt="" />
 						</div>
-						<p>Here is a list of projects I've worked on and bit about each of them</p>
+						<p>
+							Here is a list of projects I've worked on and bit about each of
+							them
+						</p>
 						<a href="generic.html" class="button">Learn More</a>
 					</div>
 				</div>
@@ -111,16 +196,22 @@
 	<footer id="footer">
 		<div class="copyright">
 			<ul class="icons">
-				<li><a href="https://www.linkedin.com/in/hasnain2808/" class="icon fa-linkedin"><span
-							class="label">Linkedin</span></a></li>
+				<li>
+					<a href="https://www.linkedin.com/in/hasnain2808/" class="icon fa-linkedin"><span
+							class="label">Linkedin</span></a>
+				</li>
 				<!-- <li><a href="#" class="icon fa-gmail"><span class="label">Facebook</span></a></li> -->
-				<li><a href="https://github.com/hasnain2808" class="icon fa-github"><span
+				<li>
+					<a href="https://github.com/hasnain2808" class="icon fa-github"><span
 							class="label">Github</span></a>
 				</li>
 				<!-- <li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
 			</ul>
-			<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a
-					href="https://unsplash.com">Unsplash</a>.</p>
+			<p>
+				&copy; Untitled. All rights reserved. Design:
+				<a href="https://templated.co">TEMPLATED</a>. Images:
+				<a href="https://unsplash.com">Unsplash</a>.
+			</p>
 		</div>
 	</footer>
 
@@ -131,7 +222,6 @@
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
