edited project descriptions

--- a/generic.html
+++ b/generic.html
@@ -48,48 +48,33 @@
 						<h5>Jun 2019 – Present</h5>
 						<p align='justify'>
 							<ul>
+								<li> We are trying to achieve two goals simulataneouslu using this project
+								<li> One is to contribute towards AGI research and the other is to provide a companion
+									to people that could help people having mental illness
 								<li>The mental health issues of loneliness and depression are two rapidly growing
-									problems
-									in society today.The feeling of being alone is often noted to be an ironic feeling
-									given
-									the
-									almost invasive nature of social networking and mobile platforms today.
-								<li>There is an
-									ever-increasing demand for solutions to help people suffering from these mental
-									health
-									issues.
-									According to government statistics, India needs 13,500 psychiatrists in the country
-									and the
-									nation has only 3,827. Where the country desperately needs 20,250 clinical
-									psychologists, we
-									have only 898. There is also sadly a stigma attached to these problems as Indian
-									society
-									generally looks at people with these problems in a very negative light and outcasts
-									them.
-								<li>Many
-									Indians who suffer from these problems find seeking help shameful and avoidable,
-									which is
-									detrimental to their healing. Therefore, human solutions are grossly inadequate at
-									present.
-								<li>Artificial Intelligence is a fast-growing phenomenon that has captured the interest
-									of
-									experts
-									from many different fields of study as a way of facilitating complex problem-solving
-									in a
-									way
-									that was not previously possible.
+									problems in society today
+								<li>There is an ever-increasing demand for solutions to help people suffering from these
+									mental health
+
 								<li>This solution aims to create artificial intelligence that
 									simulates a lot of the human processes of communication such as establishing
-									long-term
-									relationships with the user, understanding the mood of the user during a
-									conversation and
-									also
-									detecting whether a user is depressed or lonely.
+									long-term relationships with the user, understanding the mood of the user during a
+									conversation and also detecting whether a user is depressed or lonely.
+
+								<li>Here we propose a system that accepts user input as text and/or voice
+								<li> Our system then processes the input to find the cues related to emotions and
+									factual topics
+								<li> We use a graph based data base such as Neo4j for persistent storage of user
+									personality and moving context
+								<li> The user personality is detected using various methods such as mayers briggs
+								<li>We are working on a generative model for open-ended questions and a retrieval-based
+									model for generating
+									factual answers related to the user from the context graphs and other sources.
+
 								<li>The system does not act as a therapist or a
-									counselor but rather attempts to present itself as a “companion” that can offer the
-									user
-									tools
-									such as meditation to manage their feelings and emotion.
+									counselor but rather attempts to present itself as a “companion” that can in future
+									offer the
+									user tools such as meditation to manage their feelings and emotion.
 							</ul>
 						</p>
 						<h3>Cyberbot</h3>
