--- a/index.html
+++ b/index.html
@@ -61,7 +61,25 @@
 				<h3>About me</h3>
 				<p align='justify'>
 					<ul>
-						<li>Over the past six years, I have worked on various languages and technologies such as
+						<li>I am pursuing engineering from Mumbai University.
+						<li> During my studies I have taken various courses from my University including computer
+							science
+							courses, Mathematics, Biology, Chemistry and Physics
+						<li>Mathematics courses include courses such as Linear Algebra, Calculus, Probability,
+							Statistics and Discrete Mathematics
+						<li> Computer Science courses include basic courses such as Programming, OOPM, Java, Python,
+							Data Structures,
+							Algorithms, OS, Networking, Databases etc
+						<li> Advanced courses include Data Mining, Artificial Intelligence, Data Warehousing, Cloud
+							computing, IOT, Soft Computing etc.
+						<li>With courses from my School I have undertaken various online courses and Nanodegrees such as
+							Udacity Computer Vision Nanodegree, Coursera Machine Learning by Stanford University, Deep
+							Learning.ai specialization, python and Image Processing courses (More on this in the
+							certificaction page).
+						<li> I have also worked on various projects including Conversational bots, Home automation using
+							Computer Vision, etc (More on this in the
+							projects page).
+						<li>I have worked on various languages and technologies such as
 							Python, Django, flask, databases, NLP, NLU, Image processing, cloud, machine learning/
 							Deep Learning, Artificial Intelligence, data structures, algorithms, TensorFlow, Pytorch,
 							Keras, etc.
@@ -93,7 +111,7 @@
 							witnessed
 						<li>My core interests lie in combining by Software engineering skills such as Data structures,
 							algorithms, Databases, System Design, etc with my Ai skills to work towards achieving goals
-							in
+							in:
 							<ul>
 								<li>NLP, NLU, Machine Translation
 								<li>Self driving cars which includes not just computer vision but also all the other
@@ -101,7 +119,9 @@
 								<li>Conversational agents
 								<li>Medical and healthcare
 								<li>psychiatry and psychology
+								<li>Graph Databases and Graph Neural Networks
 							</ul>
+						<li>I am working towards creating platforms for social good
 					</ul>
 					<!-- 
 					
