--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 					<li> A
 						few days back I graduated from Udacity computer vision nanodegree and I am working
 						towards the self-driving specialization on Coursera.</li>
+                                        <li>I contributed twice on the python pandas library recently for beginner issues</li>
 				</p>
 				<!-- <a href="#" class="button">Learn More</a> -->
 				<!-- </div>
