added project description proper

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<div class="logo"><a href="index.html">Porfolio <span>by Mohammad Hasnain</span></a></div>
+		<div class="logo"><a href="index.html">Portfolio <span>by Mohammad Hasnain</span></a></div>
 		<a href="#menu">Menu</a>
 	</header>
 
@@ -37,10 +37,10 @@
 		<div class="inner">
 			<header>
 				<h1>Hi! I'm Mohammad Hasnain</h1>
-				<p>My primary research interest lies in AI. I am highly interested in applying AI towards various
-					domains such as NLP, NLU, CV.</p>
+				<p>Data Science | Machine Learning | Computer Vision | NLP | Software Engineering</p>
 			</header>
-			<a href="#main" class="button big scrolly">Learn More</a>
+			<a href="#main" class="button big scrolly">Learn More about me</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="generic.html" class="button big scrolly">Check my work right away!   <span class="icon fa-github"></span></a>
 		</div>
 	</section>
 
@@ -48,6 +48,7 @@
 	<div id="main">
 
 		<!-- Section -->
+
 		<section class="wrapper style1">
 			<div class="inner">
 				<!-- 2 Columns -->
@@ -60,6 +61,7 @@
 				<!-- <div class="col col2"> -->
 				<h3>About me</h3>
 				<p align='justify'>
+					<b>
 					<ul>
 						<li>I am pursuing engineering from Mumbai University.
 						<li> During my studies I have taken various courses from my University including computer
@@ -89,7 +91,8 @@
 							technologies evolve and change every now and then, so I make sure that I understand the
 							inherent purpose of using a command, framework, language or tool rather than just learning
 							the syntax and applying.
-				</p>
+							<b>
+						</p>
 				<!-- <a href="#" class="button">Learn More</a> -->
 			</div>
 			<!-- </div>
@@ -99,13 +102,18 @@
 		<!-- Section -->
 		<section class="wrapper style2">
 			<div class="inner">
+				</div>
+		</section>
+		<section class="wrapper style1">
+			<div class="inner">
 				<!-- <div class="flex flex-2">
 					<div class="col col2"> -->
 				<h3>Interests</h3>
 				<p align='justify'>
 
-
+					<b>
 					<ul>
+					
 						<li>AI had redefine how we live our lives
 						<li>AI coupled with good software engineering skills can have an impact that the world has never
 							witnessed
@@ -123,6 +131,7 @@
 							</ul>
 						<li>I am working towards creating platforms for social good
 					</ul>
+				</b>
 					<!-- 
 					
 					There are various applications of NLP that define how we
@@ -163,7 +172,10 @@
 			<!-- </div>
 			</div> -->
 		</section>
-
+		<section class="wrapper style2">
+			<div class="inner">
+				</div>
+		</section>
 		<!-- Section -->
 		<section class="wrapper style1">
 			<div class="inner">
@@ -177,6 +189,7 @@
 				<!-- <div class="col col2"> -->
 				<h3>What I've been upto lately</h3>
 				<p align='justify'>
+				<b>
 					<li>I completed an internship at Ugam as a consultant-ERM in data science and another at
 						Network Intelligence in role of an intern for Python/Django. </li>
 					<li>I recently participated in two hackathons with my colleagues acting as a
@@ -193,7 +206,8 @@
 					<li> A
 						few days back I graduated from Udacity computer vision nanodegree and I am working
 						towards the self-driving specialization on Coursera.</li>
-                                        <li>I contributed twice on the python pandas library recently for beginner issues</li>
+										<li>I contributed twice on the python pandas library recently for beginner issues</li>
+									</b>
 				</p>
 				<!-- <a href="#" class="button">Learn More</a> -->
 				<!-- </div>
