--- a/publication.html
+++ b/publication.html
@@ -17,7 +17,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="logo">
-			<a href="index.html">Porfolio <span>by Mohammad Hasnain</span></a>
+			<a href="index.html">Portfolio <span>by Mohammad Hasnain</span></a>
 		</div>
 		<a href="#menu">Menu</a>
 	</header>
