updates to goals

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 		<div class="inner">
 			<header>
 				<h1>Hi! I'm Mohammad Hasnain</h1>
-				<p>Data Science | Machine Learning | Computer Vision | NLP | Software Engineering</p>
+				<p>COMPUTER SCIENCE, SOFTWARE ENGINEERING, PROGRAMMING </p>
 			</header>
 			<a href="#main" class="button big scrolly">Learn More about me</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="generic.html" class="button big scrolly">Check my work right away!   <span class="icon fa-github"></span></a>
+			<a href="generic.html" class="button big scrolly">Check my work right away! <span
+					class="icon fa-github"></span></a>
 		</div>
 	</section>
 
@@ -62,37 +63,40 @@
 				<h3>About me</h3>
 				<p align='justify'>
 					<b>
-					<ul>
-						<li>I am pursuing engineering from Mumbai University.
-						<li> During my studies I have taken various courses from my University including computer
-							science
-							courses, Mathematics, Biology, Chemistry and Physics
-						<li>Mathematics courses include courses such as Linear Algebra, Calculus, Probability,
-							Statistics and Discrete Mathematics
-						<li> Computer Science courses include basic courses such as Programming, OOPM, Java, Python,
-							Data Structures,
-							Algorithms, OS, Networking, Databases etc
-						<li> Advanced courses include Data Mining, Artificial Intelligence, Data Warehousing, Cloud
-							computing, IOT, Soft Computing etc.
-						<li>With courses from my School I have undertaken various online courses and Nanodegrees such as
-							Udacity Computer Vision Nanodegree, Coursera Machine Learning by Stanford University, Deep
-							Learning.ai specialization, python and Image Processing courses (More on this in the
-							certificaction page).
-						<li> I have also worked on various projects including Conversational bots, Home automation using
-							Computer Vision, etc (More on this in the
-							projects page).
-						<li>I have worked on various languages and technologies such as
-							Python, Django, flask, databases, NLP, NLU, Image processing, cloud, machine learning/
-							Deep Learning, Artificial Intelligence, data structures, algorithms, TensorFlow, Pytorch,
-							Keras, etc.
-						<li>It’s been almost 2-3 years now and there's not even a single day I have not
-							learned, applied or taught ML/DL/DS or related fields.
-						<li>I am a strong believer that
-							technologies evolve and change every now and then, so I make sure that I understand the
-							inherent purpose of using a command, framework, language or tool rather than just learning
-							the syntax and applying.
-							<b>
-						</p>
+						<ul>
+							<li>I am pursuing engineering from Mumbai University.
+							<li> During my studies I have taken various courses from my University including computer
+								science
+								courses, Mathematics, Biology, Chemistry and Physics
+							<li>Mathematics courses include courses such as Linear Algebra, Calculus, Probability,
+								Statistics and Discrete Mathematics
+							<li> Computer Science courses include basic courses such as Programming, OOPM, Java, Python,
+								Data Structures,
+								Algorithms, OS, Networking, Databases etc
+							<li> Advanced courses include Data Mining, Artificial Intelligence, Data Warehousing, Cloud
+								computing, IOT, Soft Computing etc.
+							<li>With courses from my School I have undertaken various online courses and Nanodegrees
+								such as
+								Udacity Computer Vision Nanodegree, Coursera Machine Learning by Stanford University,
+								Deep
+								Learning.ai specialization, python and Image Processing courses (More on this in the
+								certificaction page).
+							<li> I have also worked on various projects including Conversational bots, Home automation
+								using
+								Computer Vision, etc (More on this in the
+								projects page).
+							<li>I have worked on various languages and technologies such as
+								Python, Django, flask, databases, NLP, NLU, Image processing, cloud, machine learning/
+								Deep Learning, Artificial Intelligence, data structures, algorithms, TensorFlow,
+								Pytorch,
+								Keras, etc.
+							<li>I am a strong believer that
+								technologies evolve and change every now and then, so I make sure that I understand the
+								inherent purpose of using a command, framework, language or tool rather than just
+								learning
+								the syntax and applying.
+								<b>
+				</p>
 				<!-- <a href="#" class="button">Learn More</a> -->
 			</div>
 			<!-- </div>
@@ -102,7 +106,7 @@
 		<!-- Section -->
 		<section class="wrapper style2">
 			<div class="inner">
-				</div>
+			</div>
 		</section>
 		<section class="wrapper style1">
 			<div class="inner">
@@ -112,26 +116,11 @@
 				<p align='justify'>
 
 					<b>
-					<ul>
-					
-						<li>AI had redefine how we live our lives
-						<li>AI coupled with good software engineering skills can have an impact that the world has never
-							witnessed
-						<li>My core interests lie in combining by Software engineering skills such as Data structures,
-							algorithms, Databases, System Design, etc with my Ai skills to work towards achieving goals
-							in:
-							<ul>
-								<li>NLP, NLU, Machine Translation
-								<li>Self driving cars which includes not just computer vision but also all the other
-									parts of AI such as Planning Searching
-								<li>Conversational agents
-								<li>Medical and healthcare
-								<li>psychiatry and psychology
-								<li>Graph Databases and Graph Neural Networks
-							</ul>
-						<li>I am working towards creating platforms for social good
-					</ul>
-				</b>
+						My core interests lie in combining by Software engineering skills such as Data structures,
+						algorithms, Databases, System Design, etc with my Ai skills to work towards solving complex
+						problems
+
+					</b>
 					<!-- 
 					
 					There are various applications of NLP that define how we
@@ -174,7 +163,7 @@
 		</section>
 		<section class="wrapper style2">
 			<div class="inner">
-				</div>
+			</div>
 		</section>
 		<!-- Section -->
 		<section class="wrapper style1">
@@ -189,33 +178,21 @@
 				<!-- <div class="col col2"> -->
 				<h3>What I've been upto lately</h3>
 				<p align='justify'>
-				<b>
-					<li>I completed an internship at Ugam as a consultant-ERM in data science and another at
-						Network Intelligence in role of an intern for Python/Django. </li>
-					<li>I recently participated in two hackathons with my colleagues acting as a
-						leader in both of them. We won one of them (unscript'19) and were the finalists in the
-						smart
-						India Hackathon 2019. </li>
-					<li>I wrote my first research paper wherein I used segmented human
-						detection using object detection to control home applications. </li>
-					<li> Currently, I am working on my
-						engineering dissertation. This includes applying theories from psychology, psychiatry,
-						AI,
-						NLP, CV to create a companion that could establish long term relationships with the
-						user.</li>
-					<li> A
-						few days back I graduated from Udacity computer vision nanodegree and I am working
-						towards the self-driving specialization on Coursera.</li>
-										<li>I contributed twice on the python pandas library recently for beginner issues</li>
-									</b>
+					<b>
+						<li>I completed an internship at Ugam as a consultant-ERM in data science and another at
+							Network Intelligence in role of an intern for Python/Django. </li>
+						<li>I recently participated in two hackathons with my colleagues acting as a
+							leader in both of them. We won one of them (unscript'19) and were the finalists in the
+							smart
+							India Hackathon 2019. </li>
+						<li>I have 3 publications and working on more three</li>
+						<li>I contributed twice on the python pandas library recently for beginner issues</li>
+						<li>I am working towards improving my Software engineering skills by reading books like clean architecture and Designing data intensive applications to name a few</li>
+					</b>
 				</p>
-				<!-- <a href="#" class="button">Learn More</a> -->
-				<!-- </div>
-				</div> -->
+
 			</div>
 		</section>
-
-		<!-- Section -->
 		<section class="wrapper style1">
 			<div class="inner">
 				<header class="align-center">
@@ -261,8 +238,7 @@
 				</li>
 				<!-- <li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
 			</ul>
-			<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a
-					href="https://unsplash.com">Unsplash</a>.</p>
+
 		</div>
 	</footer>
 
